--- a/style.css
+++ b/style.css
@@ -69,11 +69,9 @@ th, td {
 }
 
 #wrapper {
-
 }
 
 #header {
-
     position: static;
     margin-left: auto;
     margin-right: auto;
@@ -83,7 +81,6 @@ th, td {
 }
 
 #content {
-
 	margin-left: auto;
 	margin-right: auto;
     border: 1px solid #00FF22;
@@ -94,31 +91,55 @@ th, td {
 }
 
 #footer {
-    margin-top: 33px;
+    margin-top: 30px;
 }
 
-#next {
+#right_down_0 {
     position: fixed;
     bottom: 0;
     right: 0;
-    width: 150px;
+    width: 190px;
     height: 30px;
     border: 3px solid #00FF22;
 }
 
-#previous {
+#left_down_0 {
     position: fixed;
     bottom: 0;
     left: 0;
-    width: 150px;
+    width: 190px;
     height: 30px;
     border: 3px solid #00FF22;
 }
 
+#left_down_1 {
+    position: fixed;
+    bottom: 33px;
+    left: 0;
+    width: 190px;
+    height: 30px;
+    border: 3px solid #00FF22;
+}
+
+#right_down_1 {
+    position: fixed;
+    bottom: 33px;
+    right: 0;
+    width: 190px;
+    height: 30px;
+    border: 3px solid #00FF22;
+}
+
+/*
 #home {
     bottom: 0;
     margin: 0 auto;
     width: 150px;
     height: 30px;
     border: 3px solid #00FF22;
+}*/
+
+.divider {
+    color: #00FF22;
+    width: 95%;
 }
