--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@ th, td {
 
 #right_down_0 {
     position: fixed;
+    padding-top: 10px;
+    padding-bottom: 10px;
     bottom: 0;
     right: 0;
     width: 190px;
@@ -105,6 +107,8 @@ th, td {
 
 #left_down_0 {
     position: fixed;
+    padding-top: 10px;
+    padding-bottom: 10px;
     bottom: 0;
     left: 0;
     width: 190px;
@@ -114,7 +118,9 @@ th, td {
 
 #left_down_1 {
     position: fixed;
-    bottom: 33px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    bottom: 53px;
     left: 0;
     width: 190px;
     height: 30px;
@@ -123,21 +129,14 @@ th, td {
 
 #right_down_1 {
     position: fixed;
-    bottom: 33px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    bottom: 53px;
     right: 0;
     width: 190px;
     height: 30px;
     border: 3px solid #00FF22;
 }
-
-/*
-#home {
-    bottom: 0;
-    margin: 0 auto;
-    width: 150px;
-    height: 30px;
-    border: 3px solid #00FF22;
-}*/
 
 .divider {
     color: #00FF22;
