--- a/style.css
+++ b/style.css
@@ -175,3 +175,12 @@ th, td {
 .xkcd {
     margin-top: 2em;
 }
+
+.git_repo {
+    margin: 2px;
+    text-align: center;
+    margin-bottom: 2em;
+    background-color: #d9d9d9;
+    color: black;
+    font-size: 0.65em;
+}
